--- a/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
+++ b/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
@@ -4,5 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+      <PackageReference Include="Tmds.DBus" Version="0.5.0" />
+      <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
+    </ItemGroup>
 
 </Project>
