Point to my fork of Tmds.DBus

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Tmds.DBus"]
 	path = Tmds.DBus
 	url = https://github.com/tmds/Tmds.DBus.git
+[submodule "Submod"]
+	url = https://github.com/dodgyrabbit/Tmds.DBus
+	branch = master
