--- a/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
+++ b/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+      <PackageReference Include="managed-midi" Version="1.3.2" />
       <PackageReference Include="Tmds.DBus" Version="0.5.0" />
       <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
     </ItemGroup>
