--- a/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
+++ b/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
@@ -9,6 +9,11 @@
       <PackageReference Include="managed-midi" Version="1.3.2" />
       <PackageReference Include="Tmds.DBus" Version="0.5.0" />
       <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
+      <PackageReference Include="xunit" Version="2.4.0" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
     </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Tmds.DBus\src\Tmds.DBus\Tmds.DBus.csproj" />
