Fix unit tests issue that causes console app to stop running

--- a/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
+++ b/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.1</LangVersion>
+    <!-- https://andrewlock.net/fixing-the-error-program-has-more-than-one-entry-point-defined-for-console-apps-containing-xunit-tests/ -->
+    <GenerateProgramFile>false</GenerateProgramFile> 
   </PropertyGroup>
   <ItemGroup>
       <PackageReference Include="managed-midi" Version="1.3.2" />
