--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: csharp
 mono: none
 dotnet: 2.1.402
 script:
- - dotnet restore
- 
+ - dotnet restore src/dodgyrabbit.MidiBle/
+ - dotnet test src/dodgyrabbit.MidiBle/ 
