--- a/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
+++ b/src/dodgyrabbit.MidiBle/dodgyrabbit.MidiBle.csproj
@@ -6,9 +6,14 @@
     <LangVersion>7.1</LangVersion>
     <!-- https://andrewlock.net/fixing-the-error-program-has-more-than-one-entry-point-defined-for-console-apps-containing-xunit-tests/ -->
     <GenerateProgramFile>false</GenerateProgramFile> 
+     <CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
       <PackageReference Include="managed-midi" Version="1.3.2" />
+      <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
       <PackageReference Include="Tmds.DBus" Version="0.5.0" />
       <DotNetCliToolReference Include="Tmds.DBus.Tool" Version="0.5.0" />
       <PackageReference Include="xunit" Version="2.4.0" />
@@ -18,8 +23,6 @@
       </PackageReference>
     </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Tmds.DBus\src\Tmds.DBus\Tmds.DBus.csproj" />
+    <ProjectReference Include="../../Tmds.DBus/src/Tmds.DBus/Tmds.DBus.csproj" />
   </ItemGroup>
-  
-
 </Project>
